hero and about section updates

--- a/index.html
+++ b/index.html
@@ -5,10 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/app.js" defer></script>
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Dubravko Cajic - Virtual Portfolio</title>
 </head>
 <body>
+    <!-- Header Hero section -->
+    <header class="hero">
+        <nav>
+            <img src="img/logo.png" class="logo" alt="Logo">
+            <ul>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <div class="hero-area">
+            <div class="hero-text">
+                <p>Hello World, I'm [</p>
+                <h1>'Dubravko'</h1>
+                <p>] Web Developer</p>
+                <div class="btn">About</div>
+            </div>
+            <div class="social-links">
+                <a href="https://www.instagram.com/dubravko.cajic/" target="_blank" class="fab fa-instagram"></a>
+                <a href="https://twitter.com/dubravkocajic" target="_blank" class="fab fa-twitter"></a>
+                <a href="https://github.com/psychonautweb" target="_blank" class="fab fa-github"></a>
+            </div>
+        </div>
+    </header>
+    <!-- Header Hero section End -->
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="information">
+            <h2>About</h2>
+            <p>Hello I'm ...</p>
+        </div>
+        <div class="profile-img"></div>
+    </section>
+    <!-- About Section End-->
+    <section>
+        
+    </section>
+
+    <footer>
+
+    </footer>
+
+
     
 </body>
 </html>
