updated about text and contact form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="about-section" id="about">
         <div class="information">
             <h2>About</h2>
-            <p>Hello I'm ...</p>
+            <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, Coding and Biology.</p>
         </div>
         <div class="profile-img-container">
             <img src="img/profile-img.png" alt="profile-img" class="profile-img">
@@ -78,6 +78,27 @@
 
         <h2>Contact me</h2>
         <p>email ... add contact form here later!</p>
+
+        <div class="contact-form">
+            <form action="https://formsubmit.co/385950177b58dbc0d4517333e2c4d2fd" method="POST">
+              <div class="row">
+                <div class="input-group">
+                  <input type="name" name="name" placeholder="Name" class="input-control" required>
+                </div>
+                <div class="input-group">
+                  <input type="text" name="email" placeholder="Email" class="input-control" required>
+                </div>
+                <div class="input-group">
+                  <input type="text" name="subject" placeholder="Subject" class="input-control" required>
+                </div>
+                <div class="input-group">
+                  <textarea placeholder="Message" name="message" class="input-control" required></textarea>
+                </div>
+                <div class="submit-btn">
+                  <button type="submit" class="btn">Send Message</button>
+                </div>
+              </div>
+            </form>
 
     </footer>
     <!-- Contact/Footer Section End -->
